--- a/code/figures.rmd
+++ b/code/figures.rmd
@@ -34,7 +34,7 @@ source("helper_functions_tables_figures.r") #Load functions to prep data for fig
 
 ##Figure 1
 
-```{r Plot_tau_against_I2, fig.asp = 0.618, cache = TRUE}
+```{r Plot_tau_against_I2, fig.asp = 0.618}
 dat3 <- readRDS("../data/tau_simulation_results.RDS")
 names(dat3) <- sort(unique(dat$effect)) #names were alphabetized upon splitting in simulation so must sort
 
@@ -82,7 +82,7 @@ Figure 1. Result of simulation relating $I^2$-values to between studies standard
 
 ##Figure 2
 
-```{r Density-plot-prep, cache = TRUE}
+```{r Density-plot-prep}
 #1) I2 plot----
 dens <- readRDS("../data/power_simulation_results.RDS")
 names(dens) <-  sort(unique(dat$effect))
@@ -138,10 +138,10 @@ I2_plot
 Figure 2. Simulated $I^2$  densities across 67 effects for zero, small, medium, and large heterogeneity according to the definitions of Higgins (2003), and a histogram of the observed $I^2$ estimates for the 67 effects. Each simulated density consists of approximately 670,000 estimates. 
 
 
-##Figure 3, correlations per effect type
+## Figure 3, correlations per effect type
 
 
-```{r corr_per_effect_type-prep, cache = TRUE}
+```{r corr_per_effect_type-prep}
 #Each set of input datapoints is meta-analyzed as per the original replication project
 #Then correlated with tau2 per effect type
 #Function 'est_heterogen_smd_raw' is sourced, see also tables.rmd
@@ -159,7 +159,7 @@ MD_fit <- function(x){
 }
 
 
-OR_fit <- function(x){
+log_or_fit <- function(x){ #NB! if a cell is 0, 1/2 will be added to it
     fit <- rma(measure = "OR", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, n1i = ntreatment, n2i = ncontrol,  data = x)
     hetero <- confint(fit)$random[c(1, 3), ] 
     data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
@@ -180,13 +180,18 @@ MD_standardized <- dat %>%
 OR2d <- c('Allowed vs. forbidden', 'Gain vs. loss framing', 
            'Norm of reciprocity', 'Low vs. high category scales') 
 
-ml2_or <- c("Affect & Risk", "Trolley Dilemma 1", "Framing", "Trolley Dilemma 2") #odds ratio effects in ML2 we will fit as OR
+#odds ratio effects in ML2 we will fit as OR
+ml2_or <- c("Affect & Risk", "Trolley Dilemma 1", "Framing", "Trolley Dilemma 2") 
 
-odds_ratios <- dat %>% 
-  filter(effect %in% c(OR2d, ml2_or)) %>% 
+#Risk differences from RRR1 that can be fit as odds ratios as well
+rd_effects <- c("Verbal overshadowing 1", "Verbal overshadowing 2")
+
+log_odds_ratios <- dat %>% 
+  filter(effect %in% c(OR2d, ml2_or, rd_effects)) %>% 
   split(.$effect) %>% 
-  map_dfr(OR_fit, .id = "effect")
+  map_dfr(log_or_fit, .id = "effect")
 
+#One with NA values: ML2; Trolley dilemma 1; Site = 'cas'
 
 tau2_per_type <- dat %>% #This is to add the effect_type names
   select(effect, effect_type) %>% 
@@ -194,13 +199,13 @@ tau2_per_type <- dat %>% #This is to add the effect_type names
   mutate(effect_type = recode(effect_type, 
                               d = "Standardized Mean Difference")) %>% 
   left_join(tau2_per_type) %>% #Add the meta-analytic results
-  filter(!effect %in% c(odds_ratios$effect, MD_standardized$effect)) %>% #drop old odds ratio effects and unstandardized MD
+  filter(!effect %in% c(log_odds_ratios$effect, MD_standardized$effect)) %>% #drop old odds ratio effects and unstandardized MD
   bind_rows(MD_standardized) %>% #add MD after standardization
-  bind_rows(odds_ratios) %>% #add odds ratios
+  bind_rows(log_odds_ratios) %>% #add odds ratios
   mutate(effect_type = ifelse(effect %in% MD_standardized$effect, "Standardized Mean Difference", effect_type),
-         effect_type = ifelse(effect %in% odds_ratios$effect, "Odds Ratio", effect_type),
+         effect_type = ifelse(effect %in% log_odds_ratios$effect, "Log Odds Ratio", effect_type),
          eff_size = abs(eff_size)) %>% #need the absolute values for plotting
-  filter(effect_type %in% c("Standardized Mean Difference", "Odds Ratio"))
+  filter(effect_type %in% c("Standardized Mean Difference", "Log Odds Ratio"))
 
 
 #labels for figure 3----
@@ -271,8 +276,8 @@ tau2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = tau2)) +
   geom_point(alpha = 0.5) +
   geom_smooth(method = "lm", se = FALSE, color = "black") + #to set alpha for the line geom_line must be used rather than geom_smooth
   geom_text(data = labels[labels$index == "tau2",], aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 2, size = 3.5, fontface = "italic", alpha = .6) + #hjust and vjust can be used to annotate the same position in all facets even though the scale are different
-  scale_y_continuous(name = expression(paste("Between studies variance ", italic(tau)^2))) +
-  scale_x_continuous(name = "Effect size") +
+  scale_y_continuous(name = expression(paste("Between Studies Variance ", italic(tau)^2))) +
+  scale_x_continuous(name = "Absolute Effect Size") +
   theme_classic() +
   theme(strip.background = element_blank(), #remove box around titles
         strip.text = element_text(size = 12),
@@ -286,7 +291,7 @@ I2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = s_I2)) +
   geom_smooth(method = "lm", se = FALSE, color = "black") + #to set alpha for the line geom_line must be used rather than geom_smooth
   geom_text(data = labels[labels$index == "I2",], aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 2, size = 3.5, fontface = "italic", alpha = .6) + #hjust and vjust can be used to annotate the same position in all facets even though the scale are different
   scale_y_continuous(name = expression(paste(italic(I)^2, " Index"))) +
-  scale_x_continuous(name = "Effect size") +
+  scale_x_continuous(name = "Absolute Effect Size") +
   coord_cartesian(ylim = c(0, 100)) +
   theme_classic() +
   theme(strip.background = element_blank(), #remove box around titles
@@ -301,7 +306,7 @@ H2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = H2)) +
   geom_smooth(method = "lm", se = FALSE, color = "black") + #to set alpha for the line geom_line must be used rather than geom_smooth
   geom_text(data = labels[labels$index == "H2",], aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 2, size = 3.5, fontface = "italic", alpha = .6) + #hjust and vjust can be used to annotate the same position in all facets even though the scale are different
   scale_y_continuous(name = expression(paste(italic(H)^2, " Index"))) +
-  scale_x_continuous(name = "Effect size") +
+  scale_x_continuous(name = "Absolute Effect Size") +
   theme_classic() +
   theme(strip.background = element_blank(), #remove box around titles
         strip.text = element_text(size = 12),
@@ -315,7 +320,7 @@ combo <- cowplot::plot_grid(tau2_facet, I2_facet, H2_facet, labels = "AUTO")
 combo
 ```
 
-Figure 3. The correlation between effect size and A) tau2, B) I2 and C) H2 respectively 40 effects that were measured as mean or standardized mean differences and 8 effects measured as odds ratios from 13 pre-registered multi-lab replication projects. Effects reported as mean differences were standardized. Square brackets contain 95% bootstrapped percentile confidence intervals.
+Figure 3. The correlation between absolute effect size and A) tau2, B) I2 and C) H2 respectively for 40 effects that were measured as mean or standardized mean differences and 8 effects measured as odds ratios or risk differences from 13 pre-registered multi-lab replication projects. Effects reported as mean differences were standardized and risk differences computed as log odds ratios. Square brackets contain 95% bootstrapped percentile confidence intervals.
 
 
 ```{r cor_het_effect_size, results = "hide", cache=TRUE}
